[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "PDF Band Remover System"
requires-python = ">=3.11"

dependencies = [
    "flask==3.1.2",
    "numpy>=1.26.0",
    "pillow>=12.0.0",
    "reportlab>=4.4.5",
    "scikit-image>=0.22.0",
    "werkzeug>=3.1.4",
    "PyMuPDF>=1.24.10",
    "fitz>=0.0.1.dev2",
]
